# qt-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_mingw.bat  build_msvc.bat  clean.bat  mingw_build.bat  mingw_env.bat  msvc_build.bat  msvc_env.bat  set_mingw_env.bat  set_msvc_env.bat
src/: CMakeLists.txt  resources.qrc
src/cpp/: Main.cpp
src/cpp/GUI/: MainWindow.cpp  MainWindow.hpp
src/cpp/GUI/ui/: mainwindow.ui
